--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
+    "react-responsive-pagination": "^2.9.1",
     "react-router-dom": "^7.0.1"
   },
   "devDependencies": {
