--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-responsive-pagination": "^2.9.1",
-    "react-router-dom": "^7.0.1"
+    "react-router-dom": "^7.0.1",
+    "redux-persist": "^6.0.0",
+    "reselect": "^5.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
