--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,9 @@
 {
-    "builds": [
-      {
-        "src": "index.js",   
-        "use": "@vercel/node"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/server.js"  
-      }
-    ]
-  }
-  
+  "rewrites": [
+    {
+      "source": "/:path*",
+      "destination": "/index.html"
+    }
+  ]
+}
   
